# soxcue

./: .gitignore  README.md  pyproject.toml
soxcue/: cli.py  cmd.py  config.py  parser.py  process.py  sheets.py  sox_jobs.py  status.py  tagging.py
tests/: fixtures.py  test_cue_parser.py  test_sheets.py  test_sox_jobs.py  test_tagging.py
tests/data/: test_cue_sheet_data.json
tests/data/Awesome Artist - 2024 - Awesome Album/: Awesome Artist - Awesome Album.cue
